Calculo diferencia de fechas y añadimos boton registro bateria en el mainActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
 
     <string name="caracteristicas_salud_bateria_presente_si">Bateria en el dispositivo: SI </string>
     <string name="caracteristicas_salud_bateria_presente_no">Bateria en el dispositivo: NO </string>
+    <string name="main_registro">REGISTRO BATERIA</string>
 
 </resources>
 
