--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,22 +7,23 @@
 
     <!--ACTIVTIES-->
     <string name="title_activity_caracteristicas">Iniciar Test</string>
+    <string name="title_activity_Datos">Datos y valoracion Dispositivo</string>
 
     <!--MENU PRINCIPAL-->
     <string name="main_radio_modo_usuario">Modo Usuario</string>
     <string name="main_radio_modo_fabricante">Modo Fabricante</string>
     <string name="main_radio_caracteristicas_bateria">Caracteristicas Bateria</string>
-    <string name="main_iniciar_btn">Iniciar Test</string>
+    <string name="main_iniciar_btn">INICIAR</string>
     <string name="main_elija_opcion">Elija una opcion de las anteriores</string>
 
 
     <!--listaVideos-->
-    <string name="listaVideos_mensajeIndicativo" >Salen los videos que esten en la carpeta raiz (Movies)</string>
+    <string name="listaVideos_mensajeIndicativo">LISTA DE VIDEOS CARPETA RAIZ (Movies)</string>
 
 
     <!--Caracteristicas-->
     <string name="caracteristicas_bateriaTitulo">--(BATERIA)--</string>
-    <string name="caracteristicas_Estado">Estado: </string>
+    <string name="caracteristicas_Estado">Estado -> </string>
     <string name="caracteristicas_Estado_no_conocido">-> ESTADO NO CONOCIDO</string>
     <string name="caracteristicas_Estado_cargando">-> BATERIA ESTA CARGANDO"</string>
 
@@ -31,33 +32,33 @@
     <string name="caracteristicas_Estado_carga_completa">-> BATERIA LLENA</string>
 
 
-
-    <string name="caracteristicas_Tecnologia">Tecnologia: </string>
-    <string name="caracteristicas_Temperatura">Temperatura: </string>
-    <string name="caracteristicas_Voltaje">Voltaje: </string>
-    <string name="caracteristicas_PorcentajeBateria">Porcentaje bateria: </string>
-    <string name="caracteristicas_PorcentajeBateriaMaximo">Porcentaje bateria Maximo Permitido: </string>
+    <string name="caracteristicas_Tecnologia">Tecnologia -> </string>
+    <string name="caracteristicas_Temperatura">Temperatura -> </string>
+    <string name="caracteristicas_Voltaje">Voltaje -> </string>
+    <string name="caracteristicas_PorcentajeBateria">Porcentaje bateria -> </string>
+    <string name="caracteristicas_PorcentajeBateriaMaximo">Porcentaje bateria Maximo Permitido -> </string>
     <string name="caracteristicas_Voltios">Voltios</string>
 
 
-    <string name="caracteristicas_CARGARDOR_CORRIENTE">Toma de corriente: energia de cargador</string>
-    <string name="caracteristicas_USB_CORRIENTE">Toma de corriente: energia de usb</string>
-    <string name="caracteristicas_BATERIA_CORRIENTE">Toma de corriente: energia de bateria</string>
-    <string name="caracteristicas_SIN_CORRIENTE">Toma de corriente: sin toma de corriente</string>
+    <string name="caracteristicas_CARGARDOR_CORRIENTE">Toma de corriente -> energia de cargador</string>
+    <string name="caracteristicas_USB_CORRIENTE">Toma de corriente -> energia de usb</string>
+    <string name="caracteristicas_BATERIA_CORRIENTE">Toma de corriente -> energia de bateria</string>
+    <string name="caracteristicas_SIN_CORRIENTE">Toma de corriente -> sin toma de corriente</string>
 
-    <string name="caracteristicas_salud_bateria_desconocida">Salud Bateria: DESCONOCIDA </string>
-    <string name="caracteristicas_salud_bateria_buena">Salud Bateria: BUENA</string>
-    <string name="caracteristicas_salud_bateria_sobrecalentamiento">Salud Bateria: CUIDADO!! SOBRECALENTAMIENTO</string>
-    <string name="caracteristicas_salud_bateria_muerta">Salud Bateria: MUERTA</string>
-    <string name="caracteristicas_salud_bateria_voltaje_por_encima_de_lo_normal">Salud Bateria: CUIDADO!! VOLTAJE POR ENCIMA DE LO RECOMENDADO</string>
-    <string name="caracteristicas_salud_bateria_fallo_inespecifico">Salud Bateria: FALLO INESPECIFICO</string>
-    <string name="caracteristicas_salud_bateria_temperatura_baja"> Salud Bateria: CUIDADO!! TEMPERATURA DEMASIDO BAJA</string>
+    <string name="caracteristicas_salud_bateria_desconocida">Salud Bateria -> DESCONOCIDA </string>
+    <string name="caracteristicas_salud_bateria_buena">Salud Bateria -> BUENA</string>
+    <string name="caracteristicas_salud_bateria_sobrecalentamiento">Salud Bateria -> CUIDADO!! SOBRECALENTAMIENTO</string>
+    <string name="caracteristicas_salud_bateria_muerta">Salud Bateria -> MUERTA</string>
+    <string name="caracteristicas_salud_bateria_voltaje_por_encima_de_lo_normal">Salud Bateria -> CUIDADO!! VOLTAJE POR ENCIMA DE LO RECOMENDADO</string>
+    <string name="caracteristicas_salud_bateria_fallo_inespecifico">Salud Bateria -> FALLO INESPECIFICO</string>
+    <string name="caracteristicas_salud_bateria_temperatura_baja"> Salud Bateria -> CUIDADO!! TEMPERATURA DEMASIDO BAJA</string>
 
 
-
-    <string name="caracteristicas_salud_bateria_presente_si">Bateria en el dispositivo: SI </string>
-    <string name="caracteristicas_salud_bateria_presente_no">Bateria en el dispositivo: NO </string>
-    <string name="main_registro">REGISTRO BATERIA</string>
+    <string name="caracteristicas_salud_bateria_presente_si">Bateria en el dispositivo -> SI </string>
+    <string name="caracteristicas_salud_bateria_presente_no">Bateria en el dispositivo -> NO </string>
+    <string name="main_registro">BATERIA</string>
+    <string name="main_valoracion">VALORACION</string>
+    <string name="registro_borrar_registro"> BORRAR REGISTRO</string>
 
 </resources>
 
