Modo Valoracion terminado con los datos de referencia que hay actualmente

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="valoracion_tv_duracion">Duracion</string>
+    <string name="valoracion_nombreDispositivo">Nombre Dispositivo</string>
 
 </resources>
 
